# deepkey

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INTEGRITY_MODEL.md  Makefile  Makefile.integrity-template  README.md  default.nix  default.nix.old  flake.nix  happ.yaml  package-lock.json  package.json  pkgs.nix  pnpm-lock.yaml  pnpm-workspace.yaml  test.sh
.github/workflows/: all-tests.yml  build-pages.yml  test.yml
.github/workfows/: test.yml
crates/holochain_deepkey_dna/: Cargo.toml
crates/holochain_deepkey_dna/src/: lib.rs
deepkey/: dna.yaml
dnas/deepkey/: Makefile  dna.yaml
dnas/deepkey/sdk/: Cargo.toml
dnas/deepkey/sdk/src/: lib.rs
dnas/deepkey/types/: Cargo.toml
dnas/deepkey/types/src/: app_binding.rs  device_invite.rs  key_meta.rs  key_registration.rs  lib.rs
dnas/deepkey/workdir/: dna.yaml
dnas/deepkey/zomelets/: README.md  package-lock.json  package.json  webpack.config.js
dnas/deepkey/zomes/coordinator/deepkey/: Cargo.toml
dnas/deepkey/zomes/coordinator/deepkey/src/: authority_spec.rs  authorized_spec_change.rs  change_rule.rs  device_invite.rs  device_invite_acceptance.rs  device_name.rs  dna_binding.rs  joining_proof.rs  key_anchor.rs  key_generation.rs  key_registration.rs  key_revocation.rs  keyset_root.rs  lib.rs  source_of_authority.rs
dnas/deepkey/zomes/coordinator/deepkey/tests/: deepkey_tests.rs
dnas/first/workdir/: dna.yaml
docs/: DL-2024-05-20-key-authority-declaration.md  PublicMethods.md
docs/2023/: README.md
docs/limbo/: Multi_device_management.md
docs/prototype/: Generators.md  Membrane_proof.md
hcdefs/: dna.yaml
nix/: sources.json  update.sh
original/: default.nix  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
original/nix/: sources.json
original/zomes/deepkey_integrity/: Cargo.toml
packs/: happ.yaml
packs/deepkey/: dna.yaml
tests/: change_rule.test.ts  key_store.js  keyset_root.test.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  utils.js  vitest.config.ts
tests/integration/: setup.js  test_api.js  test_basic.js  test_change_rules.js  test_claim_unmanaged_key.js  test_key_management.js  utils.js
tests/src/: utils.ts
ui/: .prettierrc  README.md  deepkey.d.ts  index.html  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
ui-old/: package.json
ui/src/: app.d.ts  app.html  app.postcss  holochain-app.ts
ui/src/components/: cryptographic-hash.svelte  cryptographicHash.svelte  editable-name.svelte  editableName.svelte  identicon.svelte  invitation-alert.svelte  invitationAlert.svelte  invitations.svelte  invite-agent.svelte  key-state-badge.svelte  manual-invite-acceptance.svelte  recovationAlert.svelte  register-key.svelte
ui/src/lib/: deepkey-client.ts  holochain-client.ts  util.ts
ui/src/routes/: +layout.js  +layout.svelte  (+3 more)
workdir/: happ.yaml  web-happ.yaml
zomes/: Cargo.toml
zomes/deepkey/: Cargo.toml
zomes/deepkey/src/: app_binding.rs  authority_spec.rs  change_rule.rs  deepkey_agent.rs  device_authorization.rs  device_invite.rs  device_invite_acceptance.rs  dna_binding.rs  dna_key_binding.rs  entry.rs  error.rs  generator.rs  init.rs  joining_proof.rs  key.rs  key_anchor.rs  key_change_rule.rs  key_generation.rs  key_meta.rs  key_registration.rs  key_revocation.rs  keyset_root.rs  lib.rs  link.rs  source_of_authority.rs  utils.rs  validate.rs  validation.rs
zomes/deepkey/src/change_rule/: entry.rs  error.rs  validate.rs  zome_call.rs
zomes/deepkey/src/device_authorization/: device_invite.rs  device_invite_acceptance.rs  entry.rs  error.rs  inbox.rs  validate.rs  zome_call.rs
zomes/deepkey/src/device_authorization/device_invite/: entry.rs  error.rs  validate.rs  zome_call.rs
zomes/deepkey/src/device_authorization/device_invite_acceptance/: entry.rs  error.rs  validate.rs  zome_call.rs
zomes/deepkey/src/device_authorization/device_invite_accepted/: entry.rs
zomes/deepkey/src/device_authorization/inbox/: zome_call.rs
zomes/deepkey/src/dna_binding/: entry.rs  error.rs  zome_call.rs
zomes/deepkey/src/generator/: entry.rs  error.rs  validate.rs  zome_call.rs
zomes/deepkey/src/joining_proof/: zome_call.rs
zomes/deepkey/src/key/: entry.rs  zome_call.rs
zomes/deepkey/src/key_anchor/: entry.rs  validate.rs  zome_call.rs
zomes/deepkey/src/key_meta/: entry.rs  error.rs  validate.rs  zome_call.rs
zomes/deepkey/src/key_registration/: entry.rs  error.rs  validate.rs  zome_call.rs
zomes/deepkey/src/keyset_root/: entry.rs  error.rs  link.rs  validate.rs  zome_call.rs
zomes/deepkey/src/link/: error.rs
zomes/deepkey/src/meta/: entry.rs
zomes/deepkey/src/validation/: create_entry.rs  create_link.rs  create_private_entry.rs  delete_entry.rs  delete_link.rs  update_entry.rs
zomes/deepkey_csr/: Cargo.toml
zomes/deepkey_csr/src/: app_binding.rs  authority_spec.rs  authorized_spec_change.rs  change_rule.rs  device.rs  device_invite.rs  device_invite_acceptance.rs  device_name.rs  dna_binding.rs  joining_proof.rs  key_anchor.rs  key_meta.rs  key_registration.rs  key_revocation.rs  keyset_root.rs  lib.rs  source_of_authority.rs  utils.rs
zomes/deepkey_integrity/: Cargo.toml
zomes/deepkey_integrity/src/: change_rule.rs  entry.rs  error.rs  generator.rs  init.rs  keyset_root.rs  keyset_root_old.rs  lib.rs  validate.rs  validate_classic.rs
zomes/deepkey_integrity/src/change_rule/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/device_authorization/device_invite/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/device_authorization/device_invite_acceptance/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/dna_binding/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/generator/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/key_anchor/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/key_meta/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/key_registration/: entry.rs  error.rs  validate.rs
zomes/deepkey_integrity/src/keyset_root/: entry.rs  error.rs  validate.rs
(+100 files in other folders)
