[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["crates/holochain_deepkey_dna", "zomes/*"]

[workspace.dependencies]
serde = "1"
rmp-serde = "1"
serde_bytes = "0.11"
hc_deepkey_types = { version = "0.8.0-dev.3" }
hc_deepkey_sdk = { version = "0.7.0-dev.3" }
holo_hash = { version = "=0.4.0-dev.11", features = ["hashing", "encoding"] }
holochain_integrity_types = { version = "=0.4.0-dev.12" }
hdi = { version = "=0.5.0-dev.12" }
hdk = { version = "=0.4.0-dev.14" }
whi_hdi_extensions = { version = "0.12" }
whi_hdk_extensions = { version = "0.12" }

[workspace.dependencies.deepkey]
path = "zomes/deepkey"

[workspace.dependencies.deepkey_csr]
path = "zomes/deepkey_csr"
