[package]
name = "deepkey"
version = "0.0.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "deepkey"

[dependencies]
hc_deepkey_types = { path = "../../dnas/deepkey/types" }
hdi = { workspace = true }
hdk = { workspace = true }
holo_hash = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = "1.0.38"
whi_hdi_extensions = { workspace = true }

# temporary fix for compile error in
getrandom = { version = "=0.2.7", features = ["custom"] }
