[package]
name = "deepkey"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "deepkey"

[dependencies]
hc_deepkey_types = { workspace = true }
hdi = { workspace = true, features = ["trace"] }
holo_hash = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = "1.0.38"
whi_hdi_extensions = { workspace = true }
