[package]
name = "deepkey_csr"
version = "0.0.1"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "deepkey_csr"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
deepkey = { workspace = true }

[dev-dependencies]
# holochain = { workspace = true }
# tokio =  { workspace = true }
# serial_test =  { workspace = true }
# futures =  { workspace = true }

