[package]
name = "deepkey_csr"
version = "0.0.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "deepkey_csr"

[dependencies]
deepkey = { workspace = true }
hc_deepkey_sdk = { workspace = true }
hdk = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
whi_hdk_extensions = { workspace = true }

[dev-dependencies]
ed25519-dalek = { version = "2.1", features = [ "rand_core" ] }
rand = "0.8"
