[package]
name = "deepkey_integrity"
description = "DeepKey hApp DNA Integrity Zome"
version = "0.0.2"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
license = "CAL-1.0"
homepage = "https://github.com/holochain/deepkey"
documentation = "https://github.com/holochain/deepkey"
keywords = [ "holochain", "holo", "deepkey" ]
categories = [ "cryptography", "holochain" ]
edition = "2021"

[lib]
name = "deepkey_integrity"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[dependencies]
hdk = "=0.0.148"
hdi = "=0.0.20"
serde = "*"  # use whatever serde hdk gives us
thiserror = "1"

[dev-dependencies]
mockall = "0.9"
fixt = "0.0.14"
holochain = "0.0.158"
holochain_types = "0.0.53"
holochain_integrity_types = "0.0.16"
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
mock = ["hdk/mock", "hdk/test_utils"]
