[package]
name = "deepkey_integrity"
description = "DeepKey hApp DNA Integrity Zome"
version = "0.0.2"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
license = "CAL-1.0"
homepage = "https://github.com/holochain/deepkey"
documentation = "https://github.com/holochain/deepkey"
keywords = [ "holochain", "holo", "deepkey" ]
categories = [ "cryptography", "holochain" ]
edition = "2021"

[lib]
name = "deepkey_integrity"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[dependencies]
hdk = "=0.0.151"
hdi = "=0.1.1"
serde = "*"		# use whatever serde hdk gives us
thiserror = "1"

[dev-dependencies]
arbitrary = "=1.1.3"	# Avoid unstable rust in 1.1.4; defeats compilation of unit tests
mockall = "0.9"
hdi = { version = "=0.1.1",  features = ["mock", "test_utils"] }
hdk = { version = "=0.0.151", features = ["mock"] }
fixt = "0.0.14"
holochain_types = "0.0.55"
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
mock = ["hdk/mock", "hdk/test_utils"]
