[package]
name = "hc_deepkey_sdk"
version = "0.3.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/deepkey"
description = "SDK for the Deepkey DNA Zomes"
readme = "README.md"

[lib]
name = "deepkey_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_deepkey_types = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

arbitrary = { workspace = true, optional = true }

[features]
fuzzing = [
    "arbitrary",
    "hc_deepkey_types/fuzzing",
]