[package]
name = "hc_deepkey_sdk"
version = "0.6.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/deepkey"
description = "SDK for the Deepkey DNA Zomes"
readme = "README.md"

[lib]
name = "deepkey_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_deepkey_types = { version = "0.7", path = "../types" }
hdk = "0.4.0-dev.1"
serde = "1"
serde_bytes = "0.11"

arbitrary = { version = "1.0", features = ["derive"], optional = true }

[features]
fuzzing = [
    "arbitrary",
    "hc_deepkey_types/fuzzing",
]