[package]
name = "hc_deepkey_types"
version = "0.3.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/deepkey"
description = "Definitions used by the Deepkey DNA Zomes"
readme = "README.md"

[lib]
name = "deepkey_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
# hdi = { version = "0.4.0-beta-dev.34" }
# hdi = { git = "https://github.com/holochain/holochain.git", branch = "deepkey-hookup" }
# hdi = { path = "../../../../chain/crates/hdi" }
# holo_hash = { version = "0.3.0-beta-dev.26", features = ["hashing", "encoding"] }
# holo_hash = { path = "../../../../chain/crates/holo_hash", features = ["hashing", "encoding"] }
hdi = { workspace = true }
holo_hash = { workspace = true }
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"

arbitrary = { version = "1.0", features = ["derive"], optional = true }


[features]
fuzzing = [
    "arbitrary",
    "hdi/fuzzing",
    "holo_hash/fuzzing",
]