[package]
name = "hc_deepkey_types"
version = "0.5.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/deepkey"
description = "Definitions used by the Deepkey DNA Zomes"
readme = "README.md"

[lib]
name = "deepkey_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = { workspace = true }
holo_hash = { workspace = true, features = ["hashing", "encoding"] }
holochain_integrity_types = { workspace = true }
rmpv = { workspace = true }
serde = { workspace = true }

arbitrary = { workspace = true, optional = true }


[features]
fuzzing = [
    "arbitrary",
    # "hdi/fuzzing",
    "holochain_integrity_types/fuzzing",
    "holo_hash/fuzzing",
]