[package]
name = "hc_deepkey_types"
version = "0.8.0-dev.3"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/holochain/deepkey"
description = "Definitions used by the Deepkey DNA Zomes"
readme = "README.md"

[lib]
name = "deepkey_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Any Holochain dependencies specified here should be "*" versions to allow the consumer
# to pick the version they want to use.
hdi = "*"
holo_hash = { version = "*", features = ["hashing", "encoding"] }
holochain_integrity_types = "*"

rmpv = { workspace = true }
serde = { workspace = true }

arbitrary = { version = "1.0", features = ["derive"], optional = true }

[features]
fuzzing = [
    "arbitrary",
    # "hdi/fuzzing",
    "holochain_integrity_types/fuzzing",
    "holo_hash/fuzzing",
]
